--- a/TeamVote/MainPage.xaml
+++ b/TeamVote/MainPage.xaml
@@ -47,29 +47,82 @@
                          VoteValue="4" />
    </ContentPage.Resources>
    <!--#endregion-->
-   
+
    <ScrollView>
-      <VerticalStackLayout Spacing="25"
-                           Padding="30,0"
-                           VerticalOptions="Center">
+      <Grid RowDefinitions="Auto,Auto,Auto"
+            ColumnDefinitions="*,*"
+            RowSpacing="25"
+            ColumnSpacing="25"
+            Padding="25">
 
-         <Image Source="dotnet_bot.png"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+         <VerticalStackLayout Grid.Row="0"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="2"
+                              Spacing="25">
+            <Image Source="dotnet_bot.png"
+                   WidthRequest="100"
+                   HeightRequest="100"
+                   HorizontalOptions="Center" />
+            <Label Text="Welcome To TeamVote"
+                   FontSize="Title"
+                   HorizontalOptions="Center"
+                   LineBreakMode="NoWrap" />
+            <Button Text="New Vote"
+                    FontSize="Medium"
+                    HorizontalOptions="Center"
+                    Command="{Binding NewVoteCommand}" />
+         </VerticalStackLayout>
 
-         <Label Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-
-         <Label Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+         <Border Grid.Row="1"
+                 Grid.Column="0"
+                 StrokeThickness="5"
+                 HorizontalOptions="Center"
+                 Padding="10"
+                 MinimumWidthRequest="300"
+                 MinimumHeightRequest="400">
+            <ListView ItemsSource="{Binding Votes}"
+                      Header="{Binding .}"
+                      MinimumWidthRequest="300"
+                      MinimumHeightRequest="400"
+                      SeparatorColor="Orange"
+                      SeparatorVisibility="Default"
+                      SelectionMode="None">
+               <ListView.HeaderTemplate>
+                  <DataTemplate>
+                     <Grid ColumnDefinitions="*,*">
+                        <Label Grid.Column="0"
+                               Text="User"
+                               FontSize="Medium"
+                               FontAttributes="Bold"
+                               TextDecorations="Underline" />
+                        <Label Grid.Column="1"
+                               FontSize="Medium"
+                               Text="Vote"
+                               FontAttributes="Bold"
+                               TextDecorations="Underline" />
+                     </Grid>
+                  </DataTemplate>
+               </ListView.HeaderTemplate>
+               <ListView.ItemTemplate>
+                  <DataTemplate x:DataType="teamvote:VoteData">
+                     <ViewCell>
+                        <Grid ColumnDefinitions="*,*">
+                           <Label Grid.Column="0"
+                                  Text="{Binding UserId}" />
+                           <Label Grid.Column="1"
+                                  Text="{Binding VoteValue}" />
+                        </Grid>
+                     </ViewCell>
+                  </DataTemplate>
+               </ListView.ItemTemplate>
+            </ListView>
+         </Border>
 
          <!--#region DEBUG-->
-         <Border StrokeThickness="5"
+         <Border Grid.Row="2"
+                 Grid.Column="0"
+                 Grid.ColumnSpan="2"
+                 StrokeThickness="5"
                  IsVisible="{Binding IsDebug}">
             <VerticalStackLayout Padding="10">
                <Label Text="DEBUG"
@@ -130,8 +183,7 @@
             </VerticalStackLayout>
          </Border>
          <!--#endregion-->
-
-      </VerticalStackLayout>
+      </Grid>
    </ScrollView>
 
 </ContentPage>
